# nansen

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  makefile  pyproject.toml  setup.py
nansen/: __init__.py  main.py
nansen/core/: gpx.py  gpx_data_frame.py
nansen/io/: gpx.py
nansen/utils/: elevation.py  smooth.py
