[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[git]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nansen"
dynamic = ["version"]
dependencies = [
    "numpy>=1.20",
    "gpxpy>=1.6.2",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "geopy>=2.2.0",
    "rich>=12.0.0",
]

[tool.setuptools_scm]
write_to = "nansen/_version.py"
